Change sourceware.cygnus.com to sources.redhat.com.
In connection with libstdc++, change sources.redhat.com to
gcc.gnu.org.  Consequentially, make some links relative.

Remove LINK REL="home".

Other minor cleanups.

--- a/htdocs/install/binaries.html
+++ b/htdocs/install/binaries.html
@@ -31,7 +31,7 @@ contact their makers.</p>
 <li>SGI: <a href="http://freeware.sgi.com/">SGI Freeware</a>
 
 <li>Windows 95, 98, and NT: 
-    <a href="http://sourceware.cygnus.com/cygwin/">Cygwin for Windows 95,
+    <a href="http://sources.redhat.com/cygwin/">Cygwin for Windows 95,
     98, and NT</a> |
     <a href="http://www.xraylith.wisc.edu/~khan/software/gnu-win32/">GNU
     Win32 related projects</a> by Mumit Khan
