--- a/htdocs/install/specific.html
+++ b/htdocs/install/specific.html
@@ -123,7 +123,7 @@ option.</p>
 
 <p>If you wish to use pa-risc 2.0 architecture support, you must use either
 the HP assembler or a recent
-<a href="ftp://sourceware.cygnus.com/pub/binutils/snapshots">snapshot of
+<a href="ftp://sources.redhat.com/pub/binutils/snapshots">snapshot of
 gas</a>.</p>
 
 <p>More specific information to hppa*-hp-hpux* targets follows.</p>
