--- a/htdocs/libstdc++/thanks.html
+++ b/htdocs/libstdc++/thanks.html
@@ -2,9 +2,8 @@
 <HEAD>
  <META NAME="KEYWORDS" CONTENT="libstdc++, homepage, home, g++, libg++, STL">
  <TITLE>Standard C++ Library v3</TITLE>
-<LINK REL="home" HREF="http://sources.redhat.com/libstdc++/">
 <LINK REL=StyleSheet HREF="lib3styles.css">
-<!-- $Id: header.ihtml,v 1.1 2000/11/16 20:59:15 pme Exp $ -->
+<!-- $Id: thanks.html,v 1.11 2000/11/17 01:21:14 pme Exp $ -->
 </HEAD>
 <BODY>
 
