--- a/htdocs/news.html
+++ b/htdocs/news.html
@@ -288,7 +288,7 @@ targets as they appear.
 
 <dt><b>August 31, 1999</b></dt>
 <dd>Cygnus Solutions has released
-<a href="ftp://sourceware.cygnus.com/pub/java/libgcj-2.95.1.tar.gz">libgcj
+<a href="ftp://sources.redhat.com/pub/java/libgcj-2.95.1.tar.gz">libgcj
 version 2.95.1</a> Java runtime libraries for use with GCC 2.95.1.
 </dd>
 
@@ -300,13 +300,13 @@ version 2.95.1</a> Java runtime libraries for use with GCC 2.95.1.
 <dt><b>August 4, 1999</b></dt>
 <dd>
 A new snapshot of the new
-<a href="ftp://sourceware.cygnus.com/pub/libstdc++/libstdc++-2.90.6.tar.gz">
+<a href="ftp://gcc.gnu.org/pub/libstdc++/libstdc++-2.90.6.tar.gz">
 Standard C++ Library V3</a> has been released.  You can find more information
 from the
-<a href="http://sources.redhat.com/libstdc++/">libstdc++ project's home page</a>.
+<a href="libstdc++/">libstdc++ project's home page</a>.
 
 <p>Cygnus Solutions has released
-<a href="ftp://sourceware.cygnus.com/pub/java/libgcj-2.95.tar.gz">libgcj
+<a href="ftp://sources.redhat.com/pub/java/libgcj-2.95.tar.gz">libgcj
 version 2.95</a> Java runtime libraries for use with GCC 2.95.
 </dd>
 
@@ -369,8 +369,7 @@ The sixth snapshot of the ongoing re-written C++ Standard Library has
 been released.  It includes SGI STL 3.2, an automatically generated
 <code>&lt;limits&gt;</code>, a partially re-written valarray, a working
 stringbuf and stringstream (for basic types). For more information,
-please check <a href="http://sources.redhat.com/libstdc++/">
-libstdc++-2.90.5</a>. 
+please check <a href="libstdc++/">libstdc++ home page</a>.
 </dd>
 
 <dt><b>April 23, 1999</b></dt>
@@ -415,7 +414,7 @@ that tracks checkins to the egcs webpages CVS repository.
 <a href="http://www.cygnus.com/">Cygnus</a> announces the first public
 release of libgcj, the runtime component of the GNU compiler for Java.
 <br><a href="news/javaannounce.html">Read the release announcement</a>.
-<br><a href="http://sourceware.cygnus.com/java/">Goto the libgcj homepage</a>.
+<br><a href="http://sources.redhat.com/java/">Goto the libgcj homepage</a>.
 </dd>
 
 <dt><b>April 6, 1999</b></dt>
@@ -423,7 +422,7 @@ release of libgcj, the runtime component of the GNU compiler for Java.
 A new snapshot of the C++ standard library re-write has been
 released. This release includes SGI STL 3.12, a working valarray, and
 several (but not all) parts of templatized iostreams--for more information see:
-<a href="http://sources.redhat.com/libstdc++/">libstdc++-2.90.4</a>.
+<a href="libstdc++/">libstdc++ home page</a>.
 </dd>
 
 <dt><b>March 23, 1999</b></dt>
@@ -526,7 +525,7 @@ processor.
 
 <dt><b>November 5, 1998</b></dt>
 <dd>The third snapshot of the rewritten <tt>libstdc++</tt> is available.
-You can read some more on <a href="http://sources.redhat.com/libstdc++/">
+You can read some more on <a href="libstdc++/">
 http://sources.redhat.com/libstdc++/</a>.
 </dd>
 
@@ -551,7 +550,7 @@ optimization</a> support.
 
 <dt><b>September 6, 1998</b></dt>
 <dd>
-  <a href="http://www.cygnus.com/">Cygnus</a> donates <a href="http://sourceware.cygnus.com/java/gcj-announce.txt"><b>Java front end</b></a>.
+  <a href="http://www.cygnus.com/">Cygnus</a> donates <a href="http://sources.redhat.com/java/gcj-announce.txt"><b>Java front end</b></a>.
 </dd>
 
 <dt><b>September 3, 1998</b></dt>
@@ -577,7 +576,7 @@ optimization</a> support.
 
 <dt><b>July 15, 1998</b></dt>
 <dd>The first snapshot of the rewritten <tt>libstdc++</tt> is available.
-You can read some more <a href="http://sources.redhat.com/libstdc++/">here</a>.
+You can read some more <a href="libstdc++/">here</a>.
 </dd>
 
 <dt><b>June 29, 1998</b></dt>
