--- a/htdocs/libstdc++/download.html
+++ b/htdocs/libstdc++/download.html
@@ -2,9 +2,8 @@
 <HEAD>
  <META NAME="KEYWORDS" CONTENT="libstdc++, homepage, home, g++, libg++, STL">
  <TITLE>Standard C++ Library v3</TITLE>
-<LINK REL="home" HREF="http://sources.redhat.com/libstdc++/">
 <LINK REL=StyleSheet HREF="lib3styles.css">
-<!-- $Id: download.html,v 1.10 2000/11/17 01:21:14 pme Exp $ -->
+<!-- $Id: download.html,v 1.11 2000/11/19 02:52:01 gerald Exp $ -->
 </HEAD>
 <BODY>
 
@@ -17,7 +16,7 @@
      link to the FTP site is given directly, encouraging mirror usage.
 -->
 <P>Get the snapshot archive via FTP from
-   <TT>&lt;URL:ftp://sources.redhat.com/pub/libstdc++/&gt;</TT>.
+   <TT>&lt;URL:ftp://gcc.gnu.org/pub/libstdc++/&gt;</TT>.
    You will almost certainly need to use one of the 
    <A HREF="http://sources.redhat.com/mirrors.html">mirror sites</A>
    due to the extremely heavy load on the main server.
