--- a/htdocs/libstdc++/links.html
+++ b/htdocs/libstdc++/links.html
@@ -2,9 +2,8 @@
 <HEAD>
  <META NAME="KEYWORDS" CONTENT="libstdc++, homepage, home, g++, libg++, STL">
  <TITLE>Standard C++ Library v3</TITLE>
-<LINK REL="home" HREF="http://sources.redhat.com/libstdc++/">
 <LINK REL=StyleSheet HREF="lib3styles.css">
-<!-- $Id: links.html,v 1.4 2000/11/17 01:21:14 pme Exp $ -->
+<!-- $Id: links.html,v 1.5 2000/11/19 02:52:01 gerald Exp $ -->
 </HEAD>
 <BODY>
 
