Note that documentation is required for changes, and testcases strongly recommended (existing previously undocumented policy).

--- a/htdocs/contribute.html
+++ b/htdocs/contribute.html
@@ -49,6 +49,16 @@ on file.</p>
   <ul>
   <li> A description of the bug and how your patch fixes this bug.  For
        new features a description of the feature and your implementation.
+  <li> If the patch adds a new command line option, the patch must
+       also add documentation for that option to the GCC manual.
+       Similarly, if it changes the behavior of an existing command
+       line option or other documented behavior, the patch must update
+       the documentation.</li>
+  <li> It is strongly recommended the patch should add testcases for
+       any new features added and any bugs fixed to the testsuite, if
+       not already there.  (You will of course have tested any new
+       features you added, so this is simply a matter of writing your
+       tests in a suitable form for inclusion in the testsuite.)</li>
   <li> A ChangeLog entry as plaintext; see the various ChangeLog files
        for format and content.<br>
        Note that, unlike some other projects, we do require ChangeLogs
