Added items from NEWS to online features lists (creating one for GCC 3.0).

--- a/htdocs/gcc-2.95/features.html
+++ b/htdocs/gcc-2.95/features.html
@@ -52,6 +52,8 @@
     <li>Compiler will attempt to align doubles in the stack on the ia32 port
     <li>Alpha EV6 support
     <li>PowerPC 750
+    <li>RS6000/PowerPC: -mcpu=401 was added as an alias for -mcpu=403.
+        -mcpu=e603e was added to do -mcpu=603e and -msoft-float.
     <li>c3x, c4x
     <li>HyperSparc
     <li>SparcLite86x
