--- a/htdocs/gcc-3.0/criteria.html
+++ b/htdocs/gcc-3.0/criteria.html
@@ -79,13 +79,14 @@ be completed before GCC 3.0 is released:
     <p>High-priority open bugs in GNATs will be fixed before the
        GCC 3.0 release.</p>
 <li><p>Installation Documentation</p>
-    <p>Merge <a href="http://gcc.gnu.org/install">on-line installation
+    <p>Merge <a href="../install/">on-line installation
        documentation</a>, <code>gcc/install.texi</code>, past changes
        to <code>gcc/INSTALL</code> made in the CVS tree without
        realising that it was a generated file that were subsequently
        overridden when it was regenerated, the old system-specific
        <code>gcc/README.*</code> files, and
-       <code>gcc/f/g77install.texi</code>.</p>
+       <code>gcc/f/g77install.texi</code>.
+       <strong>Partly done</strong></p>
 </ul>
 
 <h2>Platform Support</h2>
@@ -138,11 +139,12 @@ answering questions and reviewing patches as time permits.</p>
 <caption>Secondary Evaluation Platforms</caption>
 <tr><th>Chip     <th>OS                  <th>Triplet
     <th>Tester
-<tr><td>Intel x86<td>FreeBSD 4.0         <td>i386-unknown-freebsdelf
+<tr><td>Intel x86<td>FreeBSD 4.2         <td>i386-unknown-freebsd4.2
+    <td><a href="mailto:obrien@freebsd.org">David O'Brien</a></td>
 <tr><td>PowerPC  <td>GNU/Linux           <td>
 <tr><td>SPARC    <td>SunOS 4.1.4         <td>sparc-sun-sunos4.1.4
 <tr><td>SPARC    <td>Debian GNU/Linux 2.2<td>sparc-linux
-    <td><a href="mailto:bcollins@debian.org">Ben Collins</a>
+    <td><a href="mailto:bcollins@debian.org">Ben Collins</a></td>
 <tr><td>ARM      <td>GNU/Linux           <td>
 <tr><td>Intel x86<td>Cygwin              <td>i686-pc-cygwin
 </table>
