Note XScale contribution.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -150,6 +150,12 @@ hope to release by the end of the year.
 
 <dl>
 
+<dt><b>December 4, 2000</b></dt>
+<dd>
+Nick Clifton of Red Hat has donated support for the Intel XScale
+architecture.
+</dd>
+
 <dt><b>November 26, 2000</b></dt>
 <dd>
 The C, C++ and Objective C front ends now use the integrated
