Update format checking projects list.

--- a/htdocs/projects/index.html
+++ b/htdocs/projects/index.html
@@ -223,11 +223,6 @@ where it doesn't fit in range).</li>
 list of format argument have the correct boundedness
 qualification.</li>
 
-<li>Finer grained warning options for some specific warnings (of use
-to NetBSD); <a
-href="http://gcc.gnu.org/ml/gcc-patches/2000-11/msg00798.html">patch</a>
-available.</li>
-
 <li>Meaning of "quad" and <code>%q</code>: anything more accurate than
 <code>long long</code>?  See messages <a
 href="http://gcc.gnu.org/ml/gcc-bugs/1999-02n/msg00164.html">1</a> and
@@ -257,14 +252,9 @@ and <a
 href="http://gcc.gnu.org/ml/gcc-patches/2000-02/msg00829.html">3</a>
 to gcc-patches.</li>
 
-<li>Possible security warnings (maybe under a <code>-Wsecurity</code>
-option):
+<li>Possible security warnings under <code>-Wformat-security</code>:
 
   <ul>
-
-  <li>Warn for calls to <code>printf</code> and <code>scanf</code>
-  functions with non-constant format if there are no arguments to the
-  format (for example, <code>printf (foo)</code>).</li>
 
   <li>Warn for <code>sprintf</code> into fixed length buffer if the
   output can't be proved not to overrun.  Similarly for
