--- a/htdocs/search.html
+++ b/htdocs/search.html
@@ -128,6 +128,7 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
      this page is checked into CVS, which adds a level of complexity that
      is not currently handled well.  -->
 <td><select name=restrict multiple size=6>
+<option value="gcc/2000-12">Dec 2000
 <option value="gcc/2000-11">Nov 2000
 <option value="gcc/2000-10">Oct 2000
 <option value="gcc/2000-09">Sep 2000
@@ -169,6 +170,7 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
 <option value="gcc/1997-09">Sep 1997
 </select></td>
 <td><select name=restrict multiple size=6>
+<option value="gcc-bugs/2000-12">Dec 2000
 <option value="gcc-bugs/2000-11">Nov 2000
 <option value="gcc-bugs/2000-10">Oct 2000
 <option value="gcc-bugs/2000-09">Sep 2000
@@ -210,6 +212,7 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
 <option value="gcc-bugs/1997-09">Sep 1997
 </select></td>
 <td><select name=restrict multiple size=6>
+<option value="gcc-patches/2000-12">Dec 2000
 <option value="gcc-patches/2000-11">Nov 2000
 <option value="gcc-patches/2000-10">Oct 2000
 <option value="gcc-patches/2000-09">Sep 2000
@@ -243,6 +246,7 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
 <option value="gcc-patches/1998-05">May 1998
 </select></td>
 <td><select name=restrict multiple size=6>
+<option value="gcc-help/2000-12">Dec 2000
 <option value="gcc-help/2000-11">Nov 2000
 <option value="gcc-help/2000-10">Oct 2000
 <option value="gcc-help/2000-09">Sep 2000
@@ -261,6 +265,7 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
 <option value="gcc-help/1999-q3">Jul-Sep 1999
 </select></td>
 <td><select name=restrict multiple size=6>
+<option value="gcc-cvs/2000-12">Dec 2000
 <option value="gcc-cvs/2000-11">Nov 2000
 <option value="gcc-cvs/2000-10">Oct 2000
 <option value="gcc-cvs/2000-09">Sep 2000
@@ -294,6 +299,7 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
 <option value="gcc-cvs/1998-05">May 1998
 </select></td>
 <td><select name=restrict multiple size=6>
+<option value="gcc-testresults/2000-12">Dec 2000
 <option value="gcc-testresults/2000-11">Nov 2000
 <option value="gcc-testresults/2000-10">Oct 2000
 <option value="gcc-testresults/2000-09">Sep 2000
