Condense and update various parts.

--- a/htdocs/install/index.html
+++ b/htdocs/install/index.html
@@ -12,25 +12,17 @@ http://gcc.gnu.org/install/">http://gcc.gnu.org/install/</a>.
 well as detailing some target specific installation instructions.
 
 <p>GCC includes several components that previously were separate distributions
-with their own installation instructions.  This document supercedes all 
+with their own installation instructions.  This document supersedes all 
 package specific installation instructions.  We provide the component specific
 installation information in the source distribution for historical reference
 purposes only.
 
-<p>We recommend you read the entire generic installation instructions as
-well as any target specific installation instructions before you proceed
-to configure, build, test and install GCC.
-
-<p>If something goes wrong in the configure, build, test or install
-procedures, first double check that you followed the generic and target
-specific installation instructions carefully.  Then check the 
-<a href="../faq.html">FAQ</a> to see if your problem is covered before you file
-a bug report.
-
-<p><em>Before</em> starting the build/install procedure please browse
+<p><em>Before</em> starting the build/install procedure please check
 the <a href="specific.html">host/target specific installation notes</a>.
+We recommend you browse the entire generic installation instructions
+before you proceed.</p>
 
-<p>The installation procedure is broken into five steps.
+<p>The installation procedure itself is broken into five steps.
 
 <ol>
   <li><a href="download.html">Downloading the source</a></li>
