2000-12-08  Alexandre Petit-Bianco  <apbianco@cygnus.com>
	* index.html: Mention libgcj migration.

(http://sources.redhat.com/ml/java-patches/2000-q4/msg00214.html)

--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -72,6 +72,17 @@ i
 <table>
 
 <tr><td valign="top">
+<b>December 8, 2000</b>
+</td><td>
+The libgcj repository is now <A HREF="/ml/java-discuss/2000-12/msg00095.html">
+closed</A>: We're moving our sources over to the gcc
+<A HREF="/ml/java-announce/2000/msg00003.html">
+tree</A>. Read <A HREF="http://gcc.gnu.org/cvs.html">here</A> and 
+<A HREF="http://gcc.gnu.org/cvswrite.html">here</A> how you will soon check
+your sources out.
+<pre>
+</td></tr>
+<tr><td valign="top">
 <b>November 2, 2000</b>
 </td><td>
 Warren Levy has checked in code for a serialized object dumper.
@@ -198,7 +209,7 @@ href="http://www.gnu.org/philosophy/free-sw.html">Free Software</a>.
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: index.html,v 1.51 2000/10/29 20:01:03 tromey Exp $
+$Id: index.html,v 1.52 2000/11/03 08:24:28 warrenl Exp $
 </small>
 </address>
 
