Mention interpreter for Alpha

--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -72,6 +72,12 @@ i
 <table>
 
 <tr><td valign="top">
+<b>December 9, 2000</b>
+</td><td>
+Thanks to Richard Henderson's recent libffi changes, the libgcj bytecode interpreter is now enabled for Alpha systems.
+</td></tr>
+
+<tr><td valign="top">
 <b>December 8, 2000</b>
 </td><td>
 The libgcj repository is now <A HREF="/ml/java-discuss/2000-12/msg00095.html">
@@ -80,8 +86,8 @@ closed</A>: We're moving our sources over to the gcc
 tree</A>. Read <A HREF="http://gcc.gnu.org/cvs.html">here</A> and 
 <A HREF="http://gcc.gnu.org/cvswrite.html">here</A> how you will soon check
 your sources out.
-<pre>
 </td></tr>
+
 <tr><td valign="top">
 <b>November 2, 2000</b>
 </td><td>
@@ -209,7 +215,7 @@ href="http://www.gnu.org/philosophy/free-sw.html">Free Software</a>.
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: index.html,v 1.52 2000/11/03 08:24:28 warrenl Exp $
+$Id: index.html,v 1.53 2000/12/09 19:47:13 apbianco Exp $
 </small>
 </address>
 
