Move web.html to projects directory.  Link to it from projects/index.html.

--- a/htdocs/projects/index.html
+++ b/htdocs/projects/index.html
@@ -17,6 +17,9 @@ href="bp/main.html">Bounds Checking with Bounded Pointers</a>.
 <p>There is a separate project list for the <a
 href="cpplib.html">C preprocessor</a>.
 
+<p>There is a separate projects list for the <a href="web.html">web
+pages</a>.</p>
+
 <p>We also have a page detailing <a href="optimize.html">optimizer
 inadequacies</a>, if you'd prefer to think about it in terms of problems
 instead of features.
