--- a/htdocs/about.html
+++ b/htdocs/about.html
@@ -24,7 +24,7 @@ immediately propagate to the web server and you can easily track any
 changes or contribute some of your own.
 </p>
 
-<p>Want to contribute? Please check our <a href="web.html">TODO list</a>!</p>
+<p>Want to contribute? Please check our <a href="projects/web.html">TODO list</a>!</p>
 
 </body>
 </html>
