Minor updates for OpenServer grafted in from install.texi.

--- a/htdocs/install/specific.html
+++ b/htdocs/install/specific.html
@@ -214,8 +214,9 @@ of flags is necessary to suppress negative interactions with multilibing.</p>
 
 <p>The native SCO assembler that is provided with the OS at no charge
 is normally required.  If, however, you must be able to use the GNU
-assembler you may configure this package using the flags <code>--with-gnu-as</code>.  
-You must use a recent version of GNU binutils; version 2.9.1 seems to work well.
+assembler (perhaps you're compiling code with asms that require GAS syntax) 
+you may configure this package using the flags <code>--with-gnu-as</code>.  
+You must use a recent version of GNU binutils; versions past 2.9.1 seems to work well.
 If you select this option, you will be unable to reliably build COFF
 images.  In general, the <code>--with-gnu-as</code> option isn't as well tested as the native assembler.</p>
 
