--- a/htdocs/libstdc++/status.html
+++ b/htdocs/libstdc++/status.html
@@ -3,7 +3,7 @@
  <META NAME="KEYWORDS" CONTENT="libstdc++, homepage, home, g++, libg++, STL">
  <TITLE>Standard C++ Library v3</TITLE>
 <LINK REL=StyleSheet HREF="lib3styles.css">
-<!-- $Id: status.html,v 1.6 2000/11/29 20:38:57 pme Exp $ -->
+<!-- $Id: status.html,v 1.7 2000/12/03 23:35:09 jsm28 Exp $ -->
 </HEAD>
 <BODY>
 
@@ -16,15 +16,16 @@
 </P>
 
 <P>New things that work are in the latest
-   <A HREF="17_intro/RELEASE-NOTES">release notes</A>.
+   <A HREF="http://gcc.gnu.org/onlinedocs/libstdc++/17_intro/RELEASE-NOTES">release notes</A>.
 </P>
 
 <P>Known problems and bugs, which will force us to actually keep this
-   file up-to-date, can be found in <A HREF="17_intro/BUGS">bugs</A>.
+   file up-to-date, can be found in <A
+   HREF="http://gcc.gnu.org/onlinedocs/libstdc++/17_intro/BUGS">bugs</A>.
 </P>
 
 <P>Things that need to be done and are looking for volunteers can be found
-   in: <A HREF="17_intro/TODO">pick me</A>.
+   in: <A HREF="http://gcc.gnu.org/onlinedocs/libstdc++/17_intro/TODO">pick me</A>.
 </P>
 
 <P>This release has been tested with CVS gcc on the following
@@ -38,7 +39,7 @@
     <TR>
     <TH ALIGN=LEFT>N</TH>
     <TH ALIGN=LEFT>host</TH>
-    <TH ALIGN=CENTER>build</TH>
+    <TH ALIGN=CENTER>build?</TH>
     <TH ALIGN=CENTER>static pass/fail</TH>
     <TH ALIGN=CENTER>shared pass/fail</TH>
     </TR>
@@ -46,7 +47,7 @@
     <TR>
     <TD ALIGN=LEFT>91</TD>
     <TD ALIGN=LEFT>alpha-unknown-linux-gnu</TD>
-    <TD ALIGN=CENTER>+ (see Note 1)</TD>
+    <TD ALIGN=CENTER>+</TD>
     <TD ALIGN=CENTER>176/8</TD>
     <TD ALIGN=CENTER>176/8</TD>
     </TR>
@@ -91,6 +92,13 @@
     <TD ALIGN=CENTER>results_not_in</TD>
     </TR>
 
+    <TR>
+    <TD ALIGN=LEFT>91</TD>
+    <TD ALIGN=LEFT>sparc-sun-solaris2.8</TD>
+    <TD ALIGN=CENTER>+ (see Note 2)</TD>
+    <TD ALIGN=CENTER>176/8</TD>
+    <TD ALIGN=CENTER>176/8</TD>
+    </TR>
 
     <TR>
     <TD ALIGN=LEFT>91</TD>
