--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -81,8 +81,10 @@ Thanks to Richard Henderson's recent libffi changes, the libgcj bytecode interpr
 <b>December 9, 2000</b>
 </td><td>
 The libgcj sources have <A HREF="/ml/java-discuss/2000-12/msg00102.html">
-migrated</A> to the gcc repository.
-</td></tr>
+migrated</A> to the gcc repository. We've imported
+<A HREF="http://sourceforge.net/projects/fastjar">fastjar</A> in our
+<A HREF="http://gcc.gnu.org/cgi-bin/cvsweb.cgi/egcs/fastjar/">tree</A>
+and use it as a replacement to zip.  </td></tr>
 
 <tr><td valign="top">
 <b>December 8, 2000</b>
@@ -222,7 +224,7 @@ href="http://www.gnu.org/philosophy/free-sw.html">Free Software</a>.
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: index.html,v 1.56 2000/12/10 20:05:56 apbianco Exp $
+$Id: index.html,v 1.57 2000/12/10 20:07:33 apbianco Exp $
 </small>
 </address>
 
