--- a/htdocs/gcc-2.95/testing.html
+++ b/htdocs/gcc-2.95/testing.html
@@ -22,7 +22,7 @@ to set up the infrastructure needed to run the testsuite at all.</p>
 
 <li>Download gcc-2.95.2 and the current testsuite:
 <br><a href="ftp://gcc.gnu.org/pub/gcc/releases/gcc-2.95.2/gcc-2.95.2.tar.gz">
-gcc-2.95.2.tar.gz</l>
+gcc-2.95.2.tar.gz</a>
 <br><a href="ftp://gcc.gnu.org/pub/gcc/snapshots/2000-11-27/gcc-tests-20001127.tar.gz">gcc-tests-20001127.tar.gz</a>
 </li>
 
