* build-snapshot.html: Mention more specifics on activating libgcj 	regarding noconfigdirs in the toplevel configure.in. 	* index.html: Added a Build link. 	* about.html: Ditto. 	* contrib.html: Ditto. 	* docs.html: Ditto. 	* done.html: Ditto. 	* download.html: Ditto. 	* faq-portugese.html: Ditto. 	* faq.html: Ditto. 	* mail.html: Ditto. 	* projects.html: Ditto. 	* support.html: Ditto. 	* thanks.html: Ditto. 	* tm.html: Ditto.

--- a/htdocs/java/build-snapshot.html
+++ b/htdocs/java/build-snapshot.html
@@ -68,6 +68,10 @@ you get Libgc from an other cvs or snapshot repository.
   Have a look at the toplevel configure.in (egcs/configure.in) and
   make sure that the variable `noconfigdirs' isn't assigned to
   something (like target-libjava or ${libgcj}.)
+<br>
+  Also, check for platform-specific assignments of `noconfigdirs' with
+  ${libgcj}; if ${libgcj} is listed for your platform, remove it before
+  configuring.
 </pre></td></tr>
 
 <tr bgcolor="cccccc">
