--- a/htdocs/java/contrib.html
+++ b/htdocs/java/contrib.html
@@ -18,6 +18,7 @@
 <a href="mail.html">Mailing Lists</a><br>
 <a href="docs.html">Documentation</a><br>
 <a href="download.html">Download</a><br>
+<a href="build-snapshot.html">Build</a><br>
 <a href="contrib.html">Contributing</a><br>
 <a href="done.html">Done with Gcj</A><br>
 <a href="/cgi-bin/gnatsweb.pl?user=guest&password=guest&database=java&cmd=login">Bugs</a><br>
@@ -222,7 +223,7 @@ projects</a>.
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: contrib.html,v 1.7 2000/10/29 22:03:13 tromey Exp $
+$Id: contrib.html,v 1.8 2000/10/29 22:14:38 tromey Exp $
 </small>
 </address>
 
