--- a/htdocs/java/faq-portugese.html
+++ b/htdocs/java/faq-portugese.html
@@ -27,6 +27,7 @@
 <br><a href="mail.html">Mailing Lists</a>
 <br><a href="docs.html">Documentation</a>
 <br><a href="download.html">Download</a>
+<br><a href="build-snapshot.html">Build</a>
 <br><a href="contrib.html">Contributing</a>
 <br><a href="done.html">Done with Gcj</A>
 <br><a href="/cgi-bin/gnatsweb.pl?user=guest&password=guest&database=java&cmd=login">Bugs</a>
