--- a/htdocs/java/faq.html
+++ b/htdocs/java/faq.html
@@ -21,6 +21,7 @@
                   <a href="mail.html">Mailing Lists</a><br>
                   <a href="docs.html">Documentation</a><br>
                   <a href="download.html">Download</a><br>
+		  <a href="build-snapshot.html">Build</a><br>
                   <a href="contrib.html">Contributing</a><br>
 		  <a href="done.html">Done with Gcj</A><br>
                   <a href="http://sourceware.cygnus.com/cgi-bin/gnatsweb.pl?user=guest&password=guest&database=java&cmd=login">Bugs</a><br>
@@ -780,7 +781,7 @@ $ ../configure [...]
 </table>
 <hr>
 <address> <a href="about.html">The GCJ team</a> <br>
-<small> $Id: faq.html,v 1.32 2000/11/30 04:26:41 bryce Exp $ </small></address>
+<small> $Id: faq.html,v 1.33 2000/12/13 05:46:05 apbianco Exp $ </small></address>
 <h2 align=center>&nbsp;</h2>
 
     <!--#include virtual="/include/footer-subpages.html"-->
