--- a/htdocs/java/thanks.html
+++ b/htdocs/java/thanks.html
@@ -18,6 +18,7 @@
 <a href="mail.html">Mailing Lists</a><br>
 <a href="docs.html">Documentation</a><br>
 <a href="download.html">Download</a><br>
+<a href="build-snapshot.html">Build</a><br>
 <a href="contrib.html">Contributing</a><br>
 <a href="done.html">Done with Gcj</A><br>
 <a href="/cgi-bin/gnatsweb.pl?user=guest&password=guest&database=java&cmd=login">Bugs</a><br>
@@ -171,7 +172,7 @@ Thank you all!
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: thanks.html,v 1.11 2000/07/05 06:08:24 kingdon Exp $
+$Id: thanks.html,v 1.12 2000/08/14 03:11:17 green Exp $
 </small>
 </address>
 
