--- a/htdocs/java/docs.html
+++ b/htdocs/java/docs.html
@@ -18,6 +18,7 @@
 <a href="mail.html">Mailing Lists</a><br>
 <a href="docs.html">Documentation</a><br>
 <a href="download.html">Download</a><br>
+<a href="build-snapshot.html">Build</a><br>
 <a href="contrib.html">Contributing</a><br>
 <a href="done.html">Done with Gcj</A><br>
 <a href="/cgi-bin/gnatsweb.pl?user=guest&password=guest&database=java&cmd=login">Bugs</a><br>
@@ -165,7 +166,7 @@ conferences and magazines.
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: docs.html,v 1.6 2000/06/28 04:54:21 apbianco Exp $
+$Id: docs.html,v 1.7 2000/07/05 06:07:28 kingdon Exp $
 </small>
 </address>
 
