--- a/htdocs/java/mail.html
+++ b/htdocs/java/mail.html
@@ -18,6 +18,7 @@
 <a href="mail.html">Mailing Lists</a><br>
 <a href="docs.html">Documentation</a><br>
 <a href="download.html">Download</a><br>
+<a href="build-snapshot.html">Build</a><br>
 <a href="contrib.html">Contributing</a><br>
 <a href="done.html">Done with Gcj</A><br>
 <a href="http://sources.redhat.com/cgi-bin/gnatsweb.pl?user=guest&password=guest&database=java&cmd=login">Bugs</a><br>
@@ -149,7 +150,7 @@ see our <a href="/ml/#faqs">mailing list FAQs</a>.
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: mail.html,v 1.8 2000/07/19 12:25:59 tromey Exp $
+$Id: mail.html,v 1.9 2000/07/20 02:18:16 bryce Exp $
 </small>
 </address>
 
