--- a/htdocs/java/tm.html
+++ b/htdocs/java/tm.html
@@ -18,6 +18,7 @@
 <a href="mail.html">Mailing Lists</a><br>
 <a href="docs.html">Documentation</a><br>
 <a href="download.html">Download</a><br>
+<a href="build-snapshot.html">Build</a><br>
 <a href="contrib.html">Contributing</a><br>
 <a href="done.html">Done with Gcj</A><br>
 <a href="/cgi-bin/gnatsweb.pl?user=guest&password=guest&database=java&cmd=login">Bugs</a><br>
@@ -56,7 +57,7 @@ independent of Sun Microsystems, Inc.
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: tm.html,v 1.4 2000/06/28 04:54:21 apbianco Exp $
+$Id: tm.html,v 1.5 2000/07/05 06:08:20 kingdon Exp $
 </small>
 </address>
 
