Updates to reflect libgcj move

--- a/htdocs/gcc-3.0/criteria.html
+++ b/htdocs/gcc-3.0/criteria.html
@@ -57,7 +57,7 @@ be completed before GCC 3.0 is released:
 <li><p>Java Standard Library</p>
     <p>The Java standard library should be present in the tree is
        required in order to avoid users having to download it
-       separately.  <strong>Dropped</strong>.</p>
+       separately.  <strong>Done</strong>.</p>
 <li><p>GCC Support Library</p>
     <p>The <code>libgcc</code> library will be built in both static
        and shared library whenever <code>--enable-shared</code> is
