--- a/htdocs/frontends.html
+++ b/htdocs/frontends.html
@@ -9,9 +9,7 @@
 
 <p>Currently the main GCC distribution contains front-ends for C
 (gcc), C++ (g++), Objective C, Chill, Fortran (g77), and Java (<a
-href="http://sources.redhat.com/java/">GCJ</A>).  (Note that the Java
-runtime library <code>libgcj</code> is not yet included with the GCC
-sources, but will be in GCC 3.0.)</p>
+href="http://sources.redhat.com/java/">GCJ</A>).</p>
 
 <p>There are several more front-ends for different languages that have
 been written for GCC but not yet integrated into the main distribution
