--- a/htdocs/onlinedocs/index.html
+++ b/htdocs/onlinedocs/index.html
@@ -24,6 +24,7 @@ existing release.</p>
   <li><a href="http://gcc.gnu.org/onlinedocs/gxxint_toc.html">G++ Internals Manual</a>
   <li><a href="http://gcc.gnu.org/onlinedocs/cpp_toc.html">CPP Manual</a>
   <li><a href="http://gcc.gnu.org/onlinedocs/gcov_toc.html">GCOV Manual</a>
+  <li><a href="http://gcc.gnu.org/onlinedocs/libstdc++/documentation.html">libstdc++-v3 Documentation</a>
   <li><a href="http://gcc.gnu.org/onlinedocs/iostream_toc.html">iostream Manual</a>
   <li><a href="http://gcc.gnu.org/onlinedocs/chill_toc.html">Chill Manual</a>
   <li><a href="http://gcc.gnu.org/onlinedocs/objc-features_toc.html">ObjC Features</a>
