Mention GCC 2.95.3. Update the expected delivery date for GCC 3.0.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -133,10 +133,11 @@ GNU/Linux) and cross targets and use an extensive
 <a href="http://gcc.gnu.org/testresults/">test suite</a> as well as a
 <a href="http://gcc.gnu.org/benchresults/">benchmark suite</a> to
 maintain and improve quality.
-<a href="gcc-2.95/gcc-2.95.2.html">GCC 2.95.2</a> is the current release;
+<a href="gcc-2.95/gcc-2.95.2.html">GCC 2.95.2</a> is the current release
+and we are currently working on GCC 2.95.3, a maintainance update.
 <a href="gcc-2.96.html">GCC 2.96</A> and 2.97 are development snapshots
 leading towards <a href="gcc-3.0/criteria.html">GCC 3.0</A> which we
-hope to release by the end of the year.
+hope to release by the end of Q1 2001.
 </p>
 
 <hr>
